# rust-otel-connected-lambdas

./: .gitignore  README.md  package.json
infra/: cdk.json  package-lock.json  package.json
infra/lib/: datadog-queue-connected-stack.ts
infra/test/: datadog-queue-connected.test.ts
lambdas/: Cargo.toml
lambdas/handle-change-function/: Cargo.toml
lambdas/handle-change-function/src/: main.rs
lambdas/post-function/: Cargo.toml
lambdas/post-function/src/: main.rs
lambdas/read-function/: Cargo.toml
lambdas/read-function/src/: main.rs
lib/: datadog-queue-connected-stack.ts
