[package]
name = "opentelemetry-tracing"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry-semantic-conventions = "0.14"
opentelemetry = "0.27.1"
opentelemetry-stdout = { version = "0.3", features = ["trace"] }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio", "trace"] }
pin-project = "1"
serde_json = "1.0"
serde = { version = "1.0.215", features = ["derive"] }
tokio = "1"
tower = { version = "0.5", features = ["util"]}
tracing = "0.1"
lambda_runtime = { version = "0.13.0", features = ["opentelemetry"]}
opentelemetry-datadog = { version = "0.15.0", features = ["reqwest-client"] }
tracing-opentelemetry = "0.28.0"
tracing-subscriber = "0.3.19"
aws_lambda_events = { version = "0.16.0", features = ["sqs"]}
